新增选择框和滑块样式，优化设置页面的主题管理逻辑，支持主题和主题色的动态保存。更新配置加载和保存功能，确保用户设置的持久化。

--- a/src-tauri/config/config.toml
+++ b/src-tauri/config/config.toml
@@ -2,9 +2,9 @@
 autostartup = true
 
 [theme]
-theme = "light"
-accent_color = "#007bff"
-
+theme = "system"
+accent_color = "#0078D4"
+follow_system_accent = false
 
 [console]
 encoding = "ANSI"
